
	* src/z80/gen.c:
	  Fix bug in built-in strchr().
	* device/lib/Makefile.in:
	  Fix building of strcpy() for mcs51.

2012-07-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug in stack restoration for built-in functions.
	* device/lib/_strchr.c,
	  device/lib/_strncpy.c:
	  Fix conflict between built-in and non built-in functions.

2012-07-06 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: bug patched with sdcc-3.2.0-config_fix.diff
	  #3539804 - #pragma config and certain string constants,
	  thanks to Herbert Potzl

2012-06-30 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi:
	  fixed 'Installer suggest "C:\Program Files\SDCC" instead of
	  "C:\Program Files (x86)\SDCC"' problem

2012-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for operand handling in built-in memset().
	* src/SDCCopt.c:
	  Convert zero-length built-in memcpy(), strncpy(), memset()
	  back to ensure any volatiles are read. Fixes #3538725.

2012-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Fix stack adjustment after call and omission of frame pointer for --reserve-regs-iy.

2012-06-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* sdas/asrab/asrab.vcxproj: renamed output to sdasrab
	* all.vcxproj: added sdasrab.exe and sdldrab.exe
	* src/sdcc.vcxproj: removed parsing SDCC.y
	* src/yacc.vcxproj: cosmetics
	* sdas/as6808/m6808.h,
	* sdas/as8051/i8051.h,
	* sdas/asgb/gb.h,
	* sdas/asrab/rabbit.h,
	* sdas/asz80/z80.h: removed (conflicting) prototypes for machine and minit
	* src/hc08/ralloc.c (packRegisters): fixed bug indicated by a warning
	* src/pic14/gen.c (genDataPointerGet, genConstPointerGet),
	* src/pic14/genarith.c (genAddLit),
	* src/pic14/glue.c (pic14_constructAbsMap, emitInitVal)
	* src/pic16/device.h (PIC16_device),
	* src/pic16/gen.c (pic16_storeForReturn, genAnd, genXor, genAssign),
	* src/pic16/glue.c (pic16_printIvalType, pic16_printIvalChar,